Fix logo-string alignment

--- a/static/css/pages/home.scss
+++ b/static/css/pages/home.scss
@@ -89,7 +89,7 @@ h5 figure {
 	margin-bottom: 16px;
 }
 .logo-string figure+figure {
-	margin-left: 80px;
+	margin-left: 72px;
 }
 // Vertical centering
 .logo-google     { top:4px; }
@@ -334,7 +334,7 @@ a.device-nexus9:hover {
 // Media Queries
 @media screen and (max-width:1080px) {
 	.logo-string figure+figure {
-		margin-left: 60px;
+		margin-left: 54px;
 	}
 }
 @media screen and (max-width:1030px) {
